[package]
name = "draught"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draughtlib = {path = "../draughtlib"}
clap = { version = "4.4.18", features = ["derive"] }
log = { version = "0.4.20", features = [] }
simplelog = "0.12.1"